--- a/src/app/components/directives/sandbox/teamInfos/teamInfos.html
+++ b/src/app/components/directives/sandbox/teamInfos/teamInfos.html
@@ -1,16 +1,16 @@
 <div class="row">
     <!-- input field -->
-    <div class="input-field col s2">
+    <div class="col s2">
         <label for="teamLabel">{{'teamLabels.label' | translate }}</label>
     </div>
-    <div class="input-field col s10">
+    <div class="col s10">
         <input name="teamLabel" id="teamLabel" type="text" ng-model="team.label" class="validate left-align" disabled>
     </div>
 
-    <div class="input-field col s2">
+    <div class="col s2">
         <label>{{'teamLabels.activation' | translate }} </label>
     </div>
-    <div class="input-field col s10">
+    <div class="col s10">
         <input class="with-gap" name="activation" type="radio" ng-model="team.enable" id="teamStatusT" ng-value="true"
                disabled/>
         <label for="teamStatusT">{{'teamLabels.enable' | translate }}</label>
