--- a/src/app/modules/commons/users/sandbox/sbSharing.html
+++ b/src/app/modules/commons/users/sandbox/sbSharing.html
@@ -11,7 +11,7 @@
         <form name="sharingListForm" class="col s12" novalidate>
         
         <div class="row">
-            <div class="input-field col s12 valign-wrapper">
+            <div class="col s12 valign-wrapper">
                 <i class="material-icons left accent-text-color md-36">people</i>
                 <h5 translate="sbSharingPage.label.byMail"></h5>
             </div>
