--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -2,7 +2,8 @@
     <div class="container row">
         <h4 translate="landing.area-6.title" class="center"></h4>
         <div class="col m6 hide-on-small-only">
-            <img src="assets/images/Livejournal.png" class="responsive-img left" alt="icone" style="max-width: 5rem; vertical-align: middle"/>
+            <img src="assets/images/Livejournal.png" class="responsive-img left" alt="icone"
+                 style="max-width: 5rem; vertical-align: middle"/>
             <p><b translate="landing.area-6.content"></b></p>
         </div>
 
@@ -11,7 +12,7 @@
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
               novalidate>
             <div class="row">
-                <div class="input-field col s6">
+                <div class="col s6">
                     <input type="email" value="" name="EMAIL" class="email validate" id="mce-EMAIL"
                            required>
                     <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
@@ -21,7 +22,8 @@
                 </div>
                 <div class="col s6" style="margin-top: 1.5rem;">
                     <button type="submit" class="btn btn-sm waves-effect waves-light green darken-1" value="Subscribe"
-                            name="subscribe">{{'commons.buttons.validate' | translate}}<i class="material-icons right">send</i></button>
+                            name="subscribe">{{'commons.buttons.validate' | translate}}<i class="material-icons right">send</i>
+                    </button>
                 </div>
             </div>
         </form>
