--- a/src/app/modules/commons/users/billing/pay.html
+++ b/src/app/modules/commons/users/billing/pay.html
@@ -13,7 +13,7 @@
             <form stripe-form="handleStripe" name="stripeForm" class="card-form">
                 <div class="credit-card" ng-class="stripeForm.number.$card.type">
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="col s12">
                             <i class="prefix fa fa-fw fa-credit-card"></i>
                             <label for="cardn" translate="billingPage.label.pay.cardNumber"></label>
                             <input type="text" name="number" id="cardn" ng-model="number" payments-validate="card"
@@ -22,20 +22,20 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="col s12">
                             <i class="prefix fa fa-fw fa-user"></i>
                             <label for="name" translate="billingPage.label.pay.name"></label>
                             <input type="text" id="name" ng-model="name" required="true">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="col s6">
                             <i class="prefix fa fa-fw fa-calendar"></i>
                             <label for="exp" translate="billingPage.label.pay.expiry"></label>
                             <input type="text" id="exp" ng-model="expiry" payments-validate="expiry"
                                    payments-format="expiry" required="true"/>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="col s6">
                             <i class="prefix fa fa-fw fa-lock"></i>
                             <label for="cvc" translate="billingPage.label.pay.cvc">CVC</label>
                             <input type="text" id="cvc" ng-model="cvc" payments-validate="cvc" payments-format="cvc"
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="col s12">
                         <a class="btn waves-effect waves-white light-primary-color pull-left"
                            href="#/private/billing/" translate="commons.buttons.cancel">
                         </a>
