--- a/src/app/modules/commons/users/invitation/subscribeEnd.html
+++ b/src/app/modules/commons/users/invitation/subscribeEnd.html
@@ -21,7 +21,7 @@
                         <div class="row">&nbsp;</div>
                         <div class="row">
                             <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-                            <div class="col input-field m8 s12">
+                            <div class="col m8 s12">
                                 <label for="searchCity">{{'signupEndPage.tabFindClub.form.label.city' | translate}}
                                     <span class="red-text text-lighten-1">*</span></label>
                                 <input type="text" id="searchCity"
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="row" ng-if="structureSearch">
-                            <div class="input-field col s12 center-align">
+                            <div class="col s12 center-align">
                                 <div class="preloader-wrapper big active">
                                     <div class="spinner-layer">
                                         <div class="circle-clipper left">
@@ -56,7 +56,7 @@
 
                             <div class="row">
                                 <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-                                <div class="input-field col m8 s12">
+                                <div class="col m8 s12">
                                     <label>{{'signupEndPage.tabFindClub.form.label.selectClub' | translate}} <span
                                             class="red-text text-lighten-1">*</span></label>
                                 </div>
@@ -65,7 +65,7 @@
 
                             <div class="row">
                                 <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-                                <div class="input-field col m8 s12">
+                                <div class="col m8 s12">
                                     <div ng-repeat="struct in listStructures track by $index">
                                         <input class="with-gap"
                                                type="radio"
@@ -87,13 +87,13 @@
 
                         <div ng-if="catAgeSelectOK">
                             <div class="row hide-on-large-only">
-                                <div class="col input-field s12">
+                                <div class="col s12">
                                     <label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span
                                             class="red-text text-lighten-1">*</span></label>
                                 </div>
                                 <div class="col s12">&nbsp;</div>
 
-                                <div class="input-field col s12">
+                                <div class="col s12">
                                     <select name="categoryAgeSelect" ng-model="categoryAge" id="userCategoryAgeSelect"
                                             material-select
                                             required
@@ -104,11 +104,11 @@
 
                             <div class="row hide-on-med-and-down">
                                 <div class="col m2 ">&nbsp;</div>
-                                <div class="col input-field m4">
+                                <div class="col m4">
                                     <label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span
                                             class="red-text text-lighten-1">*</span></label>
                                 </div>
-                                <div class="input-field col m4">
+                                <div class="col m4">
                                     <select name="categoryAgeSelect" ng-model="categoryAge" id="userCategoryAgeSelect"
                                             material-select watch
                                             required
@@ -148,7 +148,7 @@
                         <div class="row">&nbsp;</div>
                         <div class="row">
                             <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-                            <div class="col m8 s12 input-field">
+                            <div class="col m8 s12">
                                 <label for="userStructureLabel">{{'signupEndPage.tabFindClub.form.label.clubname' |
                                     translate}} <span class="red-text text-lighten-1">*</span></label>
                                 <input type="text" id="userStructureLabel" class="validate" ng-model="structure.label"
@@ -158,7 +158,7 @@
                         </div>
                         <div class="row">
                             <div class="col m2 hide-on-med-and-down">&nbsp;</div>
-                            <div class="col m8 s12 input-field">
+                            <div class="col m8 s12">
                                 <label for="createCity">{{'signupEndPage.tabFindClub.form.label.clubAddress' |
                                     translate}} <span class="red-text text-lighten-1">*</span></label>
                                 <input type="text" id="createCity"
@@ -174,13 +174,13 @@
 
                         <div ng-if="catAgeSelectOK">
                             <div class="row hide-on-large-only">
-                                <div class="col input-field s12">
+                                <div class="col s12">
                                     <label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span
                                             class="red-text text-lighten-1">*</span></label>
                                 </div>
                                 <div class="col s12">&nbsp;</div>
 
-                                <div class="input-field col s12">
+                                <div class="col s12">
                                     <select name="categoryAgeSelect" ng-model="categoryAge" id="userCategoryAgeSelect"
                                             material-select watch
                                             required>
@@ -192,11 +192,11 @@
 
                             <div class="row hide-on-med-and-down">
                                 <div class="col m2 ">&nbsp;</div>
-                                <div class="col input-field m4">
+                                <div class="col m4">
                                     <label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span
                                             class="red-text text-lighten-1">*</span></label>
                                 </div>
-                                <div class="input-field col m4">
+                                <div class="col m4">
                                     <select name="categoryAgeSelect" ng-model="categoryAge" id="userCategoryAgeSelect"
                                             material-select watch
                                             required>
