--- a/src/app/modules/commons/users/password/pwdRenew.html
+++ b/src/app/modules/commons/users/password/pwdRenew.html
@@ -14,7 +14,7 @@
             </div>
             <div class="row">
                 <div class="col m2 hide-on-small">&nbsp;</div>
-                <div class="input-field col m4 s12">
+                <div class="col m4 s12">
                     <input id="password" type="password" class="validate" ng-model="renew.passwd" required>
                     <label for="password" translate="profilePwdPage.form.label.password"></label>
                     <div ng-if="renew.passwd">
@@ -29,7 +29,7 @@
                     </div>
                 </div>
 
-                <div class="input-field col m4 s12">
+                <div class="col m4 s12">
                     <input id="passwordConfirm" type="password" class="validate" ng-model="renew.passwdConfirm"
                            required>
                     <label for="passwordConfirm" translate="profilePwdPage.form.label.passwordConfirm"></label>
@@ -39,7 +39,7 @@
 
             <div class="row">
                 <div class="col m2 hide-on-small">&nbsp;</div>
-                <div class="input-field col s12 m8">
+                <div class="col s12 m8">
                     <div vc-recaptcha ng-model="renew.captcha"
                          on-create="setWidgetId(widgetId)"
                          on-expire="cbExpiration()"
