--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -4,7 +4,7 @@
 
     <!-- entete start tablet and sup-->
     <title-page-bar icon="event" title="mainAgenda.title"></title-page-bar>
-    
+
     <filter-calendar meta="meta"></filter-calendar>
     <!-- entete end -->
 
@@ -12,7 +12,7 @@
 
         <!-- filter -->
         <div class="col m8 s12">
-            <form class="forms forms-inline input-field">
+            <form class="forms forms-inline">
                 <input type="text" id="query" class="grey lighten-4" ng-model="query">
                 <label for="query" translate="commons.buttons.filter"></label>
             </form>
@@ -23,7 +23,7 @@
                 <i class="material-icons">add</i>
             </a>
             <button ng-click="compare()" class="waves-effect waves-light btn accent-color"
-               title="{{'mainEffective.buttons.compare' | translate}}">
+                    title="{{'mainEffective.buttons.compare' | translate}}">
                 <i class="material-icons">recent_actors</i>&nbsp;
             </button>
         </div>
