--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -52,7 +52,7 @@
                     <widget-podium meta="meta" user="user" indicator="totalPlayTime" nbitem="10"
                                    stataggregat="SUM"></widget-podium>
                 </div>
-                
+
                 <div class="col s12 m6 l6" style="margin-top:15px;">
                     <widget-podium meta="meta" user="user" indicator="holder" nbitem="10"
                                    stataggregat="SUM"></widget-podium>
@@ -86,7 +86,7 @@
             </v-page>
             <v-page>
                 <div class="col m8 s12">
-                    <form class="forms forms-inline input-field">
+                    <form class="forms forms-inline">
                         <input type="text" id="queryPlayer" class="grey lighten-4" ng-model="queryPlayer">
                         <label for="queryPlayer" translate="commons.buttons.filter"></label>
                     </form>
